# sberlinux-final

./: Cargo.toml  README.md  docker-compose.yml
config/: client.yml  server.yml
tests/: Cargo.toml
tests/tests/: connect.rs
vpn-client/: Cargo.toml  Dockerfile  example-config.yml
vpn-client/src/: client.rs  config.rs  creds.rs  lib.rs  main.rs
vpn-server/: Cargo.toml  Dockerfile  example-config.yml
vpn-server/src/: config.rs  handle_packet.rs  lib.rs  main.rs  server.rs
vpn-shared/: Cargo.toml
vpn-shared/src/: creds.rs  lib.rs  packet.rs
