[package]
name = "vpn-client"
version = "0.0.0"
edition = "2021"

[lib]

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tun = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vpn-shared = { path = "../vpn-shared" }
bincode = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
