[package]
name = "vpn-server"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
vpn-shared = { path = "../vpn-shared" }
serde_yml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
dashmap = "5.5"
